<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:background="#FFFFFF"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="409dp"
            android:layout_height="148dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="#000F67">

            <Button
                android:id="@+id/id_buttonConfig"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="setConfiguration"
                android:text="@string/id_buttonConfig"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewAux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/id_bufferCount"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Configuracion"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/id_bufferCount"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:background="#757575"
                android:ems="10"
                android:inputType="number"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toEndOf="@+id/textViewAux"
                app:layout_constraintTop_toTopOf="@+id/textViewAux" />

            <Switch
                android:id="@+id/id_addplot"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:text="@string/id_addplot"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:checked="true"
                app:layout_constraintEnd_toEndOf="@+id/id_bufferCount"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/id_bufferCount"
                app:layout_constraintTop_toBottomOf="@+id/id_bufferCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>