<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_relative"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main.MainActivity">
    
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
    
            <Chronometer
                android:id="@+id/id_chronometer"
                android:layout_width="100dp"
                android:layout_height="52dp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
    
            <TextView
                android:id="@+id/id_status_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/id_bluetooth_disconnected"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
    
            <ImageView
                android:id="@+id/id_status_bluetooth_gray"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:layout_constraintBottom_toBottomOf="@+id/id_status_bluetooth"
                app:layout_constraintEnd_toStartOf="@+id/id_status_bluetooth"
                app:layout_constraintTop_toTopOf="@+id/id_status_bluetooth"
                app:srcCompat="@android:drawable/presence_invisible"
                android:contentDescription="@string/id_status_bluetooth" />
    
            <ImageView
                android:id="@+id/id_status_bluetooth_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/id_status_bluetooth"
                app:layout_constraintBottom_toBottomOf="@+id/id_status_bluetooth"
                app:layout_constraintEnd_toStartOf="@+id/id_status_bluetooth"
                app:layout_constraintTop_toTopOf="@+id/id_status_bluetooth"
                app:srcCompat="@android:drawable/presence_busy"
                tools:ignore="DuplicateIds" />
    
        </androidx.constraintlayout.widget.ConstraintLayout>
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
    
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
    
                <EditText
                    android:id="@+id/id_file_name"
                    android:layout_width="200dp"
                    android:layout_height="58dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/id_file_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/id_button_main"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />
    
                <Button
                    android:id="@+id/id_button_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="buttonMain"
                    android:text="@string/id_button_main"
                    app:layout_constraintBottom_toBottomOf="@+id/id_file_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/id_file_name"
                    app:layout_constraintVertical_bias="0.4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
    
            <TextView
                android:id="@+id/id_error"
                android:layout_width="318dp"
                android:layout_height="67dp"
                android:text=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    
    
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutPlot"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
    
            <com.jjoe64.graphview.GraphView
                android:id="@+id/id_plotter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>